@@ -20,7 +20,6 @@
 
 /* Backup related conversions */
 
-#include "pyg-config.h"
 #include "convertors.h"
 #include "misc.h"
 
@@ -174,7 +173,7 @@ int BackupFromPython(PyObject *dict, GSM_Backup *backup) {
     s = GetCharFromDict(dict, "Creator");
     if (s == 0) {
         PyErr_Clear();
-        strcpy(backup->Creator, "python-gammu " PYTHON_GAMMU_VERSION);
+        strcpy(backup->Creator, "python-gammu " VERSION);
     } else {
         len = strlen(s);
         if (len > 50 - 1) len = 50 - 1;
