@@ -18,7 +18,6 @@
  * vim: expandtab sw=4 ts=4 sts=4:
  */
 
-#include "pyg-config.h"
 #include <string.h>
 
 char *mystrncpy(char *dest, const char *src, size_t n) {
